# Sup-Res-Bot

./: .env.example  README.md  pyproject.toml  requirements.txt
src/: config.py  logging_config.py  main.py
src/bot/: client.py  commands.py  formatting.py
src/data/: cache.py  client.py
src/data/providers/: base.py  coingecko.py
src/signals/: manager.py  models.py  support_resistance.py
src/storage/: state.py
src/utils/: errors.py  time_windows.py
tests/: test_config.py  test_main.py  test_state.py  test_support_resistance.py
